package app.entities;

/**
 * Represents a material used in the construction of a carport order.
 * <p>
 * Instances are created via the nested {@link Builder} class using the builder pattern,
 * which ensures all fields are set before the object is constructed.
 * </p>
 *
 * <pre>{@code
 * Material material = new Material.Builder()
 *     .id(1)
 *     .name("Wooden beam")
 *     .description("4x4 pressure-treated pine, 3 metres")
 *     .price(299.00)
 *     .build();
 * }</pre>
 */
public class Material {

    /**
     * Unique identifier for the material in the database.
     */
    private int id;

    /**
     * Display name of the material.
     */
    private String name;

    /**
     * Detailed description of the material (dimensions, type, etc.).
     */
    private String description;

    /**
     * Unit price of the material in øre (whole number, no decimals).
     */
    private double price;

    private int widthMm;

    private int heightMm;

    private int minLengthMm;

    private int maxLengthMm;

    /**
     * Private constructor — use {@link Builder} to create instances.
     */
    private Material() {
    }

    /**
     * @return the material's database ID
     */
    public int getId() {
        return id;
    }

    /**
     * @return the display name of the material
     */
    public String getName() {
        return name;
    }

    /**
     * @return the detailed description of the material
     */
    public String getDescription() {
        return description;
    }

    /**
     * @return the unit price of the material in øre
     */
    public double getPrice() {
        return price;
    }

    public int getWidth() {
        return widthMm;
    }

    public int getHeight() {
        return heightMm;
    }

    public int getMinLength() {
        return minLengthMm;
    }

    public int getMaxLength() {
        return maxLengthMm;
    }

    /**
     * Builder for constructing {@link Material} instances.
     * <p>
     * Each setter method returns the builder itself to allow method chaining
     * Call {@link #build()} when all desired fields have been set.
     * </p>
     */
    public static class Builder {
        private int id;
        private String name;
        private String description;
        private double price;
        private int widthMm;
        private int heightMm;
        private int minLengthMm;
        private int maxLengthMm;

        /**
         * Sets the material's database ID.
         *
         * @param id the unique identifier
         * @return this builder
         */
        public Builder id(int id) {
            this.id = id;
            return this;
        }

        /**
         * Sets the display name of the material.
         *
         * @param name the material name
         * @return this builder
         */
        public Builder name(String name) {
            this.name = name;
            return this;
        }

        /**
         * Sets the description of the material.
         *
         * @param description the detailed description
         * @return this builder
         */
        public Builder description(String description) {
            this.description = description;
            return this;
        }

        /**
         * Sets the unit price of the material.
         *
         * @param price the price in øre
         * @return this builder
         */
        public Builder price(double price) {
            this.price = price;
            return this;
        }

        public Builder widthMm(int widthMm) {
            this.widthMm = widthMm;
            return this;
        }

        public Builder heightMm(int heightMm) {
            this.heightMm = heightMm;
            return this;
        }

        public Builder minLengthMm(int minLengthMm) {
            this.minLengthMm = minLengthMm;
            return this;
        }

        public Builder maxLengthMm(int maxLengthMm) {
            this.maxLengthMm = maxLengthMm;
            return this;
        }

        /**
         * Builds and returns a new {@link Material} with the values set on this builder.
         *
         * @return a fully constructed {@link Material} instance
         */
        public Material build() {
            Material material = new Material();
            material.id = this.id;
            material.name = this.name;
            material.description = this.description;
            material.price = this.price;
            material.widthMm = this.widthMm;
            material.heightMm = this.heightMm;
            material.minLengthMm = this.minLengthMm;
            material.maxLengthMm = this.maxLengthMm;
            return material;
        }
    }

}
