@startuml Domain Model – Fog Carport

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam ranksep 70
skinparam nodesep 50
skinparam defaultFontName Arial
skinparam class {
    BackgroundColor #FEFEFE
    BorderColor #444444
    ArrowColor #444444
    HeaderBackgroundColor #D6E8F7
}
skinparam enum {
    BackgroundColor #FFF9E6
    BorderColor #999900
    HeaderBackgroundColor #FFF3C0
}

' =====================
'  CORE ENTITIES
' =====================

class Order {
    id : int
    --
    uuid : UUID
    remark : String
    status : OrderStatus
    price : Double
}

class ContactInfo {
    id : int
    --
    firstName : String
    lastName : String
    email : String
    address : String
    postalCode : int
    city : String
    phoneNumber : String
}

class User {
    id : int
    --
    email : String
    password : String
    role : Role
}

class Specifications {
    id : int
    --
    widthCm : int
    lengthCm : int
    roofPitch : int
    roofType : RoofType
}

class Workshop {
    id : int
    --
    widthCm : int
    lengthCm : int
}

class RoofMaterial {
    id : int
    --
    name : String
    color : String
    widthCm : double
    lengthCm : double
    price : int
    roofType : RoofType
}

class Material {
    id : int
    --
    name : String
    description : String
    price : double
    widthMm : int
    heightMm : int
    minLengthMm : int
    maxLengthMm : int
}

class MaterialListEntry {
    amount : int
    length : int
    description : String
    materialType : MaterialType
}

' =====================
'  ENUMS
' =====================

enum Role {
    ADMIN
    EMPLOYEE
    CUSTOMER
}

enum OrderStatus {
    PENDING
    OFFER_SENT
    PAID
    REJECTED
    CANCELLED
}

enum RoofType {
    FLAT
    RAISED
}

enum MaterialType {
    POST
    RAFTER
    REM
    WIDE_BOARD_FRONT
    WIDE_BOARD_SIDE
    NARROW_BOARD_FRONT
    NARROW_BOARD_SIDE
    REGULAR
}

' =====================
'  RELATIONER
' =====================

Order "1" *-- "1"    ContactInfo       : placeret af >
Order "1" *-- "1"    Specifications    : specificeret med >
Order "1" *-- "0..1" Workshop          : har valgfrit >
Order "1" *-- "1..*" MaterialListEntry : indeholder >

ContactInfo "many" --> "0..1" User         : linket til >

Specifications "1" --> "1" RoofMaterial   : tækket med >
Specifications       -->     RoofType      : har type >

RoofMaterial         -->     RoofType      : gælder for >

MaterialListEntry "many" --> "1" Material  : bruger >
MaterialListEntry           -->   MaterialType

User        --> Role
Order       --> OrderStatus

@enduml
